@@ -45,6 +45,7 @@ This release includes the following bugfixes:
  o use SOCKS proxy with the multi interface
  o fixed the Curl_getoff_all_pipelines SIGSEGV 
  o POST, NTLM and following a redirect hang
+ o libcurl+NSS endless loop on incorrect password for private key
 
 This release includes the following known bugs:
 
@@ -58,6 +59,6 @@ advice from friends like these:
  Kamil Dudka, Jim Freeman, Daniel Johnson, Toshio Kuratomi, Martin Storsjo,
  Pramod Sharma, Gisle Vanem, Lenaic Lefever, Rainer Koenig, Sven Wegener,
  Tim Chen, Constantine Sapuntzakis, David McCreedy, Michael Smith,
- Colin Watson, Ebenezer Ikonne, Laurent Rabret
+ Colin Watson, Ebenezer Ikonne, Laurent Rabret, Michael Cronenworth
 
         Thanks! (and sorry if I forgot to mention someone)
